force-app/main/default/objects/CVTransformerConfiguration__c/CVTransformerConfiguration__c.object-meta.xml
<CustomObject>
  <pluralLabel>CVTransformerConfigurations</pluralLabel>
  <fullName>CVTransformerConfiguration__c</fullName>
  <description>Configuration for CV-Tranformer org</description>
  <nameField>
    <label>access_token</label>
    <type>Text</type>
  </nameField>
  <sharingModel>Private</sharingModel>
  <label>CVTransformerConfiguration</label>
</CustomObject>