force-app/main/default/objects/CVTransformerConfiguration__c/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <type>Text</type>
    <length>64</length>
    <inlineHelpText />
    <required>true</required>
    <unique>true</unique>
    <description>API key</description>
    <label>api_key</label>
</CustomField>