force-app/main/default/objects/CVTransformerConfiguration__c/fields/color_scheme__c.field-meta.xml
<CustomField>
    <fullName>color_scheme__c</fullName>
    <type>Text</type>
    <length>64</length>
    <description>Color scheme</description>
    <label>theme</label>
</CustomField>