force-app/main/default/objects/CVTransformerConfiguration__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <type>Text</type>
    <length>8</length>
    <label>language</label>
</CustomField>